--- a/client/app/styles/layout/_navbar.scss
+++ b/client/app/styles/layout/_navbar.scss
@@ -1,15 +1,15 @@
 .navbar {
   border-radius: 0px !important;
 
-  .navbar-collapse.collapse {
-    text-align: center;
-  }
-
-  .navbar-center {
-    display: inline-block;
-    float: none;
-    margin: 0;
-  }
+  //.navbar-collapse.collapse {
+  //  text-align: center;
+  //}
+  //
+  //.navbar-center {
+  //  display: inline-block;
+  //  float: none;
+  //  margin: 0;
+  //}
 }
 
 .language li a {
