--- a/client/app/styles/modules/_slideshow.scss
+++ b/client/app/styles/modules/_slideshow.scss
@@ -1,19 +1,27 @@
 /* slideshow frame */
-#show {
-  width: 520px;
-  position: relative;
-  height: 420px;
-}
+.slideshow-section {
+  height: $main-slideshow-height;
 
-#show .slide {
-  border: 10px solid #fff;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 500px;
-  height: 400px;
-  overflow: hidden;
-  text-align: center;
+  .slideshow {
+    width: 100%;
+    position: relative;
+    height: auto;
+    padding: 0;
+    margin: 0 auto;
+
+    .slide {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 0 auto;
+      margin: 0 auto;
+      z-index: -1;
+      width: 100%;
+      height: $main-slideshow-height;
+      overflow: hidden;
+      text-align: center;
+    }
+  }
 }
 
 @include generate-slideshow-animation(3, 'slide', 10s);
